@@ -1,7 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1087 2011-06-10 23:29:26 guru Exp $
+	$Id: ChangeLog,v 1.1088 2011-06-12 20:32:47 guru Exp $
 -----------------------------------------------------------------------------------------
 
+2011-06-12	pwessel
+	* gmt_io.c:		Do recursive directory search when the given directory
+				(e.g., via GMT_DATADIR) ends in a slash [also honor original
+				scheme of appending *].
 2011-06-10	pwessel
 	* gmt_map.c:		Clip path for van Grinten was wrong for global maps.
 
